fix scrollbar overflow

--- a/PrestigeColor/public/css/style.css
+++ b/PrestigeColor/public/css/style.css
@@ -5,6 +5,8 @@ body {
     font-size: 15px;
     line-height: 1.6;
     color: #333;
+
+    overflow-x: hidden;
 }
 
 *,
